# docs/swagger.json
@@ -7,6 +7,52 @@
         "version": "1.0.1"
     },
     "paths": {
+        "/api/checkout": {
+            "post": {
+                "description": "Melakukan checkout barang: format data yang harus diisi { items: [ { product_id, quantity } ]}",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "checkout"
+                ],
+                "summary": "Checkout Product",
+                "parameters": [
+                    {
+                        "description": "New Checkout Data",
+                        "name": "product",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.CheckoutRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/models.Transaction"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request body",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Failed to create checkout",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/api/kategori": {
             "get": {
                 "description": "Mengambil semua data kategori produk (Challange (Optional))",
@@ -15,6 +61,10 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "category",
+                    "produk"
                 ],
                 "summary": "Get All Categories",
                 "responses": {
@@ -45,13 +95,21 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "produk"
+                ],
                 "summary": "Get All Products",
                 "parameters": [
                     {
                         "type": "boolean",
-                        "default": false,
                         "description": "Tampilkan Detail Kategori Produk",
                         "name": "details",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Tampilkan Detail Kategori Produk Berdasarkan Pencarian Nama",
+                        "name": "name",
                         "in": "query"
                     }
                 ],
@@ -80,6 +138,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "produk"
                 ],
                 "summary": "Create New Product",
                 "parameters": [
@@ -123,6 +184,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "produk"
                 ],
                 "summary": "Get Product by ID",
                 "parameters": [
@@ -170,6 +234,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "produk"
+                ],
                 "summary": "Update Product by ID",
                 "parameters": [
                     {
@@ -212,6 +279,9 @@
             },
             "delete": {
                 "description": "Menghapus data produk berdasarkan ID",
+                "tags": [
+                    "produk"
+                ],
                 "summary": "Delete Product by ID",
                 "parameters": [
                     {
@@ -246,6 +316,86 @@
                     }
                 }
             }
+        },
+        "/api/report": {
+            "get": {
+                "description": "Mengambil laporan data transaksi penjualan barang berdasarkan tanggal yang dipilih",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "report"
+                ],
+                "summary": "Get Transaction Report By Selected Date",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "example": "2026-01-01",
+                        "description": "Tanggal awal (Format: YYYY-MM-DD)",
+                        "name": "start_date",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "example": "2026-02-01",
+                        "description": "Tanggal akhir (Format: YYYY-MM-DD)",
+                        "name": "end_date",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Report"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Failed to get report",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/report/hari-ini": {
+            "get": {
+                "description": "Mengambil laporan data transaksi penjualan barang khusus hari ini",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "report"
+                ],
+                "summary": "Get Today's Transaction Report",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Report"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Failed to get report",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -257,6 +407,28 @@
                 },
                 "name": {
                     "type": "string"
+                }
+            }
+        },
+        "models.CheckoutItem": {
+            "type": "object",
+            "properties": {
+                "product_id": {
+                    "type": "integer"
+                },
+                "quantity": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.CheckoutRequest": {
+            "type": "object",
+            "properties": {
+                "items": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.CheckoutItem"
+                    }
                 }
             }
         },
@@ -279,6 +451,71 @@
                     "type": "number"
                 },
                 "stock": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.Report": {
+            "type": "object",
+            "properties": {
+                "produk_terlaris": {
+                    "type": "object",
+                    "properties": {
+                        "nama": {
+                            "type": "string"
+                        },
+                        "qty_terjual": {
+                            "type": "integer"
+                        }
+                    }
+                },
+                "total_revenue": {
+                    "type": "number"
+                },
+                "total_transaksi": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.Transaction": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "details": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.TransactionDetail"
+                    }
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "total_amount": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.TransactionDetail": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "product_id": {
+                    "type": "integer"
+                },
+                "product_name": {
+                    "type": "string"
+                },
+                "quantity": {
+                    "type": "integer"
+                },
+                "subtotal": {
+                    "type": "integer"
+                },
+                "transaction_id": {
                     "type": "integer"
                 }
             }
