# handlers/transaction_handler.go
@@ -1,0 +1,54 @@
+package handlers
+
+import (
+	"encoding/json"
+	"kasir-api/models"
+	"kasir-api/services"
+	"net/http"
+)
+
+type TransactionHandler struct {
+	service *services.TransactionService
+}
+
+func NewTransactionHandler(service *services.TransactionService) *TransactionHandler {
+	return &TransactionHandler{service: service}
+}
+
+// POST /api/checkout
+// @Summary Checkout Product
+// @Description Melakukan checkout barang: format data yang harus diisi { items: [ { product_id, quantity } ]}
+// @Accept json
+// @Tags   checkout
+// @Produce json
+// @Param product body models.CheckoutRequest true "New Checkout Data"
+// @Success 201 {object} models.Transaction
+// @Failure 400 {string} string "Invalid request body"
+// @Failure 500 {string} string "Failed to create checkout"
+// @Router /api/checkout [post]
+func (h *TransactionHandler) HandleCheckout(w http.ResponseWriter, r *http.Request) {
+	switch r.Method {
+	case http.MethodPost:
+		h.Checkout(w, r)
+	default:
+		http.Error(w, "Method not allowed", http.StatusBadRequest)
+	}
+}
+
+func (h *TransactionHandler) Checkout(w http.ResponseWriter, r *http.Request) {
+	var req models.CheckoutRequest
+	err := json.NewDecoder(r.Body).Decode(&req)
+	if err != nil {
+		http.Error(w, "Invalid request body", http.StatusBadRequest)
+		return
+	}
+
+	transaction, err := h.service.Checkout(req.Items)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+
+	w.Header().Set("Content-Type", "application/json")
+	json.NewEncoder(w).Encode(transaction)
+}
